change structure for github pages

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="description" content="С 1 по 15 февраля 2024 года скидка 20% на Dr.Web Security Space для Android, 2 устройства на 1 год всего за 784 руб." />
     <meta name="keywords" content="dr.web promo, dr.web android" />
     <title>Скидка 20% на Dr.Web Security Space (для Android)</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico">
-    <link rel="stylesheet" href="/static/css/styles.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <main>
       <section class="promo">
         <div class="promo__info">
             <div class="promo__logo">
-                <img class="promo__logo-img" data-src="/static/img/logo.svg" alt="Dr.Web logo">
+                <img class="promo__logo-img" data-src="images/logo.svg" alt="Dr.Web logo">
             </div>
             <div class="promo__text">
                 <h1 class="promo__title">Защити свой цифровой мир</h1>
@@ -24,7 +24,7 @@
         </div>
         <div class="container">
             <div class="promo__image">
-                <img class="promo__image-img" data-src="/static/img/main-1920.svg" alt="">
+                <img class="promo__image-img" data-src="images/main-1920.svg" alt="">
             </div>
         </div>
       </section>
@@ -47,7 +47,7 @@
             <div class="product__card">
                 <div class="card__image">
                     <div class="card__image-wrapper">
-                        <img src="/static/img/SecuritySpace-Mobile-700x700px-GREEN.svg" alt="Dr.Web Security Space">
+                        <img src="images/SecuritySpace-Mobile-700x700px-GREEN.svg" alt="Dr.Web Security Space">
                     </div>
                 </div>
                 <div class="card__content">
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
                 <div class="features__image">
-                    <img src="/static/img/feature-1.svg" alt="Защита гаджетов" class="features__img">
+                    <img src="images/feature-1.svg" alt="Защита гаджетов" class="features__img">
                 </div>
             </div>
     
@@ -98,7 +98,7 @@
                     </ul>
                 </div>
                 <div class="features__image">
-                    <img src="/static/img/feature-2.svg" alt="Компоненты защиты" class="features__img">
+                    <img src="images/feature-2.svg" alt="Компоненты защиты" class="features__img">
                 </div>
             </div>
         </section>
@@ -108,7 +108,7 @@
             <div class="footer__content">
                 <div class="footer__info">
                     <div class="footer__logo">
-                        <img class="footer__logo-img" data-src="/static/img/footer-icon.png" alt="Dr.Web logo">
+                        <img class="footer__logo-img" data-src="images/footer-icon.png" alt="Dr.Web logo">
                     </div>
                     <p class="footer__copyright">© «Доктор Веб» 2003–2023</p>
                 </div>
@@ -119,6 +119,6 @@
         </div>
       </section>
     </main>
-    <script src="/static/js/main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
