--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
         
-      <div class="product-container">
+      <div class="container">
         <section id="product" class="product">
             <div class="product__info">
                 <p class="product__date">С 1 по 15 февраля 2023 года</p>
@@ -109,8 +109,8 @@
                 </div>
             </div>
         </section>
-      </div>
-      <section class="footer">
+      </div> -->
+      <!-- <section class="footer">
         <div class="container footer__container">
             <div class="footer__content">
                 <div class="footer__info">
