adaptive for features block

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
         
-      <div class="container">
+      <div id="product-container" class="container">
         <section id="product" class="product">
             <div class="product__info">
                 <p class="product__date">С 1 по 15 февраля 2023 года</p>
@@ -74,7 +74,7 @@
             </div>
         </section>
       </div>
-      <!-- <div class="container">
+      <div class="container">
         <section class="features">
             <div class="features__item">
                 <div class="features__content">
@@ -104,12 +104,12 @@
                         <li class="features__list-item">Антивирус</li>
                     </ul>
                 </div>
-                <div class="features__image">
+                <div id="item-second" class="features__image">
                     <img src="images/feature-2.svg" alt="Компоненты защиты" class="features__img">
                 </div>
             </div>
         </section>
-      </div> -->
+      </div>
       <!-- <section class="footer">
         <div class="container footer__container">
             <div class="footer__content">
