--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
         </section>
       </div>
-      <!-- <section class="footer">
+      <section class="footer">
         <div class="container footer__container">
             <div class="footer__content">
                 <div class="footer__info">
@@ -124,7 +124,7 @@
                 </div>
             </div>
         </div>
-      </section> -->
+      </section>
     </main>
     <script src="scripts/main.js"></script>
   </body>
