--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </div>
                     <p class="product__text">
                         <span class="mobile-text">Сохранит в безопасности важные <br class="mobile-break"> документы, онлайн-банкинг, <br class="mobile-break"> личные переписки, доступ к <br class="mobile-break"> социальным сетям и вашим <br class="mobile-break"> контактам</span>
-                        <span class="desktop-text">Сохранит в безопасности важные документы, <br> онлайн-банкинг, личные переписки, доступ к <br> социальным сетям и вашим контактам</span>
+                        <span class="desktop-text">Сохранит в безопасности важные документы, <br> онлайн-банкинг, личные переписки, доступ <br> к социальным сетям и вашим контактам</span>
                     </p>
                 </div>
-                <a href="https://www.drweb.ru/" class="product__terms">Условия акции</a>
+                <a href="https://www.drweb.ru/" class="product__terms" target="blank">Условия акции</a>
             </div>
             <div class="product__card">
                 <div class="card__image">
@@ -119,7 +119,7 @@
                     <p class="footer__copyright">© «Доктор Веб» 2003–2025</p>
                 </div>
                 <div class="footer__description">
-                    «Доктор Веб» — российский производитель антивирусных средств защиты информации <br> под маркой Dr.Web.
+                    «Доктор Веб» — российский производитель антивирусных средств защиты информации под маркой Dr.Web.
                 </div>
             </div>
         </div>
